--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0"
+  },
+  "dependencies": {
+    "date-fns": "^2.19.0"
   }
 }
